--- a/html/exercicios/listas.html
+++ b/html/exercicios/listas.html
@@ -10,3 +10,27 @@
     <li>Ana</li>
     <li>João</li>
 </ol>
+
+<!-- Lista Não Ordenada -->
+
+<h2>Lista de Compras</h2>
+
+<ul>
+    <li>Queijo</li>
+    <li>Leite</li>
+    <li>Arroz</li>
+    <li>Pão</li>
+</ul>
+
+<!-- Lista de Definições -->
+<h2>Principais termos do glossáriod e Cloud Computing</h2>
+<dl>
+    <dt>BaaS</dt>
+    <dd>Backend como Serviço</dd>
+    <dt>IaaS</dt>
+    <dd>Infraestrutura como Serviço</dd>
+    <dt>PaaS</dt>
+    <dd>Plataforma como Serviço</dd>
+    <dt>SaaS</dt>
+    <dd>Software como Serviço</dd>
+</dl>
